[package]
name = "ailurus-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
bytes = "1.10.1"
crc32fast = "1.5.0"
derive_builder = "0.20.2"
env_logger = "0.11.6"
error-stack = "0.6.0"
lazy_static = "1.5.0"
log = "0.4.28"
parking_lot = "0.12.4"
prost = "0.14.1"
tempfile = "3.21.0"
thiserror = "2.0.16"
